2018-02-12    <cerebrum@cleomedes.uit.no>

	* process_systemx.py (send_mail): whenever a new user is
	registered in system-x, a email will now be sent to the requestor
	and user with a copy to bas-admin@uit.no

2018-01-31    <cerebrum@cleomedes.uit.no>

	* export_cristin.py (LTPersonRepresentation.__init__): Removed function that validates fnr. The test will
	fail for all fnr with 5 0(zero) at the end (coming from PAGA)

	* export_safecom.py (safecom_export.list_affiliations): moved logger.warn to logger.debug

2018-01-24    <cerebrum@cleomedes.uit.no>

	* export_cristin.py (output_OU): Refactored how to collect ou.name as the old method no longer returned propper data.
	Refactored how to collect ou.acronym as the old method no longer returned propper data.

2018-01-18  Karen   <cerebrum@cleomedes.uit.no>

    * import_tlf.py (process_telefoni): Removed unnecessary logger warnings about empty phone numbers.

    * import_tlf.py (is_new_number): Minor bugfix.

2018-01-18    <cerebrum@cleomedes.uit.no>
    
    * maillog.py: Added to repo.

2018-01-17  Karen   <cerebrum@cleomedes.uit.no>

    * import_tlf.py: Made changes to import_tlf.py so that it only updates telephone 
    numbers that have actually changed.

2018-01-02    <cerebrum@cleomedes.uit.no>

	* generate_temp_employee_xml.py (write_xml): removed debug lines

	* ad_export_autogroups_undervisning.py (get_skoinfo): removed (debug) print lines.

2017-12-21  Karen   <cerebrum@cleomedes.uit.no>

    * import_PAGA.py: Added functionality to remove employee person spreads if person no longer has 
    ANSATT affiliation. Spreads to remove are listed in cereconf.EMPLOYEE_PERSON_SPREADS.

2017-12-18    <cerebrum@cleomedes.uit.no>

	* import_FS.py (process_person_callback): new_person.populate() should not be inside try catch.

2017-12-13    <cerebrum@cleomedes.uit.no>

	* export_xml_fronter.py: removed old import line

	* import_OU.py (set_quaran): Remove debug line

2017-12-08    <cerebrum@cleomedes.uit.no>
